YOR-51: Fixed spacing issue on chosen no results message.

--- a/components/01-atoms/forms/_yds-form.scss
+++ b/components/01-atoms/forms/_yds-form.scss
@@ -182,6 +182,10 @@
         display: flex;
       }
 
+      li.no-results {
+        display: list-item;
+      }
+
       .highlighted {
         background-color: var(--color-blue-yale);
       }
